@@ -8,6 +8,10 @@ htmltools 0.4.0.9001
   written to the .html file. (Note that `save_html(tags$html(...))` is not
   supported at this time.)
 
+* Trailing commas now permited in `...` arguments to `css()`, `tagList()`, and
+  the var-arg mutation functions: `tagAppendAttributes()`, `tagSetChildren()`,
+  and `tagAppendChildren()`.
+
 htmltools 0.4.0
 --------------------------------------------------------------------------------
 
